# python-action-test

./: .pre-commit-config.yaml  README.md  pyproject.toml  pyproject.uv.toml
.github/workflows/: dispatch.yml  test.yml  trigger.yml
src/python_action_test/: __init__.py  python_action_test.py
tests/: test_benchmark.py  test_python_action_test.py  test_version.py
