[tool.poetry]
name = "python-action-test"
version = "0.0.1"
description = "test repository for python-action"
authors = ["rcmdnk <rcmdnk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest-benchmark = "^4.0.0"

[tool.poetry.dev-dependencies]
tomli = { version = "^2.0.1", python = "<3.11"}
pytest = "7.4.3"
pytest-cov = "4.1.0"
pytest-xdist = "3.5.0"
pre-commit = "3.5.0"
black = "23.11.0"

[tool.pytest.ini_options]
addopts = "-n auto --benchmark-disable --benchmark-sort=fullname --benchmark-name=short --ignore tests/test_fail.py"
testpaths = ["tests",]
