[tool.poetry]
name = "python-action-test"
version = "0.0.1"
description = "test repository for python-action"
authors = ["rcmdnk <rcmdnk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
tomli = { version = "2.2.1", python = "<3.11"}

[tool.poetry.dev-dependencies]
pytest = "8.4.1"
pytest-benchmark = "5.1.0"
pytest-cov = "6.2.1"
pytest-xdist = "3.8.0"
pre-commit = "4.2.0"
black = "25.1.0"

[tool.pytest.ini_options]
addopts = "-n auto --benchmark-disable --benchmark-sort=fullname --benchmark-name=short --ignore tests/test_fail.py"
testpaths = ["tests",]
